<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:text="@string/titleregiter" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_passwordconfirm"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/passwordconfirm"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/button_register"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/registernow"/>

    </LinearLayout>

</LinearLayout>