<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:text="@string/titlelogin" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>