<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/button_logout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="Cerrar Sesión"
        android:layout_gravity="right"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:text="@string/agregar_recordatorio" />

    <EditText
        android:id="@+id/edittext_titulo_record"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:hint="@string/titulo"
        android:inputType="text" />

    <EditText
        android:id="@+id/edittext_mensaje_record"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="MENSAJE"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/button_agregar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/agregar"/>

    </LinearLayout>

</LinearLayout>